fix: overlap icon

--- a/src/components/NavComponent.module.css
+++ b/src/components/NavComponent.module.css
@@ -91,8 +91,15 @@
 
 .nav-overlap {
   position: absolute;
-  border: 2px solid #282c34;
-  border-radius: 100%;
+  right: -0.27em;
+  bottom: -0.25em;
+
+  font-size: .9em;
+  color: #282c34;
+}
+
+.nav-overlap-2 {
+  position: absolute;
   right: -0.2em;
   bottom: -0.2em;
 
